Refactored to use URI class instead of URL class